<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Teddy Dance</string>
    <string name="arrow_up">Up Button</string>
    <string name="arrow_left">Left Button</string>
    <string name="arrow_right">Right Button</string>
    <string name="arrow_down">Down Button</string>
    <string name="tap_to_start">TAP TO START</string>
    <string name="harder">HARDER!</string>
    <string name="more_harder">MORE HARDER!!</string>
    <string name="life">Life</string>
    <string name="game_over">GAME OVER</string>
    <string name="hint">Enter your name</string>
    <string name="player">Player</string>
    <string name="high_score">High Score</string>
    <string name="select_music">Select Music</string>
    <string name="select_background">Select Background</string>
    <string name="new_high_score">NEW HIGH SCORE!</string>
    <string name="credit">CREDITS</string>

    <!-- Extra name for intent -->
    <string name="index_song">index_song</string>
    <string name="bg">bg</string>
    <string name="score"></string>
    <string name="screenHeight">screenHeight</string>
</resources>